# Winter

./: .cirrus.yml  .gitignore  README.md  Winter.sln
.ci/windows_x64/: Dockerfile
RegBatch/: Program.cs  RegBatch.csproj
Winter/: AssemblyReader.cs  CatalogFile.cs  ComponentAppId.cs  ComponentFactory.cs  ComponentStoreLoader.cs  ComponentStoreService.cs  Constants.cs  DeltaUnpacker.cs  DisposableMemory.cs  ElevationService.cs  Extensions.cs  LUNICODE_STRING.cs  ManagedRegistryKey.cs  ManifestReader.cs  MemoryHandle.cs  MemoryNative.cs  MsPatch.cs  NativeMemoryManager.cs  NativeMethods.txt  Ntdll.cs  ObjectExtensions.cs  Program.cs  TraceCollector.cs  Util.cs  WcpLibrary.cs  WcpLibraryAccessor.cs  WindowsRegistryAccessor.cs  WindowsSystem.cs  Winter.csproj  WinterFacade.cs
Winter.Gui/: .gitignore  App.axaml  App.axaml.cs  DevServer.cs  PhotinoMessageHandler.cs  Program.cs  ProgramDefaults.cs  ViewLocator.cs  Winter.Gui.csproj  _Imports.razor  app.manifest
Winter.Gui/Controllers/: WinterSession.cs
Winter.Gui/Models/: CbsPackageViewModel.cs  Commands.cs
Winter.Gui/Pages/: Index.razor
Winter.Gui/Properties/: launchSettings.json
Winter.Gui/Services/: CbsSessionsRepository.cs
Winter.Gui/Shared/: MainLayout.razor  NavMenu.razor
Winter.Gui/UserInterface/: .gitignore  gen.bat  package.json  pnpm-lock.yaml  tailwind.config.cjs
Winter.Gui/ViewModels/: MainWindowViewModel.cs  (+1 more)
Winter.Tests/: ComponentAppIdTests.cs  Winter.Tests.csproj
tools/: CMakeLists.txt  common.h  components.txt  dll_loader.c  msdelta.c  msdelta.h
tools/midl/: CbsApi.idl  makecode.php
(+109 files in other folders)
